@@ -5,24 +5,9 @@ require 'active_support/testing/deprecation'
 require 'active_support/testing/declarative'
 require 'active_support/testing/pending'
 require 'active_support/testing/isolation'
+require 'active_support/testing/turn_formatting'
+require 'active_support/testing/mochaing'
 require 'active_support/core_ext/kernel/reporting'
-
-begin
-  silence_warnings { require 'mocha' }
-rescue LoadError
-  # Fake Mocha::ExpectationError so we can rescue it in #run. Bleh.
-  Object.const_set :Mocha, Module.new
-  Mocha.const_set :ExpectationError, Class.new(StandardError)
-end
-
-# Added by Turn to support natural case names in the output formatting
-if defined?(MiniTest)
-  require 'turn'
-  
-  if MiniTest::Unit.respond_to?(:use_natural_language_case_names=)
-    MiniTest::Unit.use_natural_language_case_names = true 
-  end
-end
 
 module ActiveSupport
   class TestCase < ::Test::Unit::TestCase
